assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap");

* {
  /* padding: 0 ; */
  /* margin: 0 ; */
  box-sizing: border-box !important;
  font-family: "Lexend", sans-serif;
}

body {
  background-color: #191919;
}

p,
h1,
h2,
h3,
h4,
h5 {
  margin: 0;
}

.container {
  max-width: 1596px;
  width: 100%;
}

.h-fit {
  height: fit-content;
}

/* ================= NAVBAR ================= */

.custom-navbar {
  background-color: #1c1c1c !important;
  border: 1px solid #262626 !important;
  top: 46px;
}

.custom-nav-item {
  padding: 12px 24px;
  border-radius: 82px;
}

.custom-nav-item:hover {
  background-color: #262626;
}

.custom-nav-link {
  text-decoration: none;
}

.navbar-brand img {
  width: 156px;
  height: 40px;
}

.auth-btn:first-of-type {
  border: none !important;
  color: white;
  padding: 14px 30px;
}
.auth-btn:first-of-type:hover {
  background: #caff33;
  color: black;
}

.auth-btn:last-of-type {
  background-color: #caff33;
  padding: 14px 30px;
  border: none;
  color: black;
}

.custom-toggler {
  background-color: #caff33;
  border: none !important;
  outline: none !important;
}

/* ================= HERO SECTION ================= */

.hero-section {
  padding-top: 298px;
  padding-bottom: 100px;
}

.hero-section .container {
  gap: 120px;
}

.hero-section .left {
  max-width: 825px;
}

.no-req-pill {
  padding: 10px;
  background-color: #262626;
  width: fit-content;
  font-size: 18px;
}

.section-heading {
  font-size: 48px;
  font-weight: 500;
  line-height: 150%;
  margin-top: 20px;
  margin-bottom: 14px;
}

.section-heading span {
  color: #caff33;
}

.p-detail {
  font-size: 18px;
  line-height: 150%;
  color: #b3b3b3;
}

.hero-section .p-detail {
  color: #e4e4e7;
}

/* ================= RIGHT CARD ================= */

.abstract-design {
  height: 383px;
  width: 418px;
  right: -50px;
  top: 5px;
  z-index: 0 !important;
}

.hero-section .right {
  position: relative;
  max-width: 515px;
  width: 100%;
  padding: 35px;
  border: 1px solid #252525;
  border-radius: 10px;
  z-index: 100 !important;
  background-color: #191919;
  /* overflow: hidden !important;  */
  background-image: url("../images/hero-right-bg.webp");
}

.hero-section .right h3 {
  color: white;
  font-weight: 500;
  font-size: 17px;
}

/* ================= TRANSACTIONS ================= */

.transaction {
  left: 0;
  right: 0;
  margin: auto;
  padding: 14px 21px;
  background: #1c1c1c;
  border: 1px solid rgb(41, 40, 40);
  border-radius: 10px;
  display: flex;
}

.transaction .transaction-text {
  font-size: 16px;
  line-height: 150%;
  font-weight: 300;
}

.transaction .name {
  font-size: 17px;
  line-height: 150%;
  letter-spacing: 0%;
  font-weight: 400;
}

.transaction .pricing {
  font-size: 21px;
  line-height: 150%;
  font-weight: 500;
  letter-spacing: 0%;
}

/* FIRST (MAIN) */
.transaction:first-of-type {
  top: 70px;
  width: 90%;
  z-index: 50;
}

/* SECOND */
.transaction:nth-of-type(2) {
  top: 125px;
  width: 80%;
  z-index: 10;
  opacity: 0.5;
}

/* THIRD */
.transaction:nth-of-type(3) {
  top: 180px;
  width: 70%;
  z-index: 5;
  opacity: 0.25;
}

.transaction .pricing {
  font-size: 21px;
  font-weight: 500;
}

.transaction figure {
  background-color: #caff33;
  width: fit-content;
  height: fit-content;
}

/* spacing after stacked cards */
.hero-section .right h3:nth-of-type(2) {
  margin-top: 240px;
}

/* from here to  */
.currency-exchange-grid {
  background: #1c1c1c;
  border-radius: 10px;
  border: 1px solid rgb(41, 40, 40);
}
.currency-col {
  padding: 17px;
  gap: 9px !important;
  font-size: 14px;
  font-weight: 300;
  border: 0.5px solid rgb(41, 40, 40);
}

.currency-col span figure {
  height: 34.68144226074219px;
  width: 34.68144226074219px;
  margin: 0px;
}
.currency-col span figure img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.currency-col span {
  font-size: 16px;
  line-height: 150%;
  letter-spacing: 0%;
  gap: 9px;
}

.amount-col {
  padding: 26px 17px;
  font-size: 17px;
  line-height: 150%;
  letter-spacing: 0%;
  color: white;
  border: 0.5px solid rgb(41, 40, 40);
}

.our-product {
  padding-block: 150px;
}

.product-section-top .left {
  max-width: 910px !important;
  gap: 14px;
  /* width: 100%; */
}

.product-section-top .right {
  background: #1c1c1c;
  border: 0.5px solid rgb(41, 40, 40);
  height: fit-content;
  padding: 14px;
  border-radius: 50px;
  margin-top: 57px;
}

.icon-back {
  border-radius: 70px;
  height: 98px !important;
  width: 98px !important;
  background: linear-gradient(to bottom, #21231a, #1a1a19);
  padding: 12px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.icon-back span {
  padding: 20px;
  border-radius: 50px;
  background: linear-gradient(to bottom, #262b1b, #1b1c19);
}

.product-grid .product-card {
  padding-right: 50px;
}

.product-grid #second-card {
  padding-left: 50px;
  border-inline: 1px solid #262626;
}

.product-grid .product-card h3 {
  margin-top: 30px;
  margin-bottom: 20px;
}

.use-case-grid {
  margin-top: 80px !important;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 100px;
  row-gap: 60px;
}

.use-case-grid .case:first-of-type .polka-dots {
  height: 213px;
  width: 224px;
}

.use-case-grid .case:first-of-type {
  padding: 50px;
  background-color: #1c1c1c;
  border-radius: 20px;
}

.use-case-grid .case:first-of-type .item {
  padding: 30px;
  /* gap: 24px; */
  border-radius: 16px;
  border: 1px solid #262626;
  font-size: 20px;
  line-height: 150%;
  letter-spacing: 0%;
  background-color: #1a1a1a;
}

.use-case-grid .case:nth-of-type(2) {
  padding-block: 31px;
}

.use-case-grid .case:nth-of-type(2) .heading {
  font-weight: 500;
  font-size: 30px;
  line-height: 150%;
  letter-spacing: 0%;
  color: white;
}

.use-case-grid .case:nth-of-type(2) .p-detail {
  padding: 14px 0px 62px 0px;
}

.use-case-grid .case:nth-of-type(2) .percent {
  display: flex;
  justify-content: space-between;
}
/* ... */

